<resources>
    <string name="app_name">마일로그</string>
    <string name="with_milelog">마일로그와 함께한지</string>
    <string name="days">일째</string>
    <string name="average_srore">평균 점수</string>
    <string name="up_points">점 증가</string>
    <string name="down_points">n점 감소</string>
    <string name="no_change">변동 없음</string>
    <string name="last_30_days">지난 30일간</string>
    <string name="average_driving_distance">평균 주행거리</string>
    <string name="average_driving_time">평균 주행시간</string>
    <string name="recent_score">최근 관리 점수</string>
    <string name="overview_of_my_car">내 차 한눈에 보기</string>
    <string name="recent_driving_score">최근 주행 총점</string>
    <string name="one_month_average">1개월 평균</string>
    <string name="six_months_average">6개월 평균</string>
    <string name="one_year_average">1년 평균</string>
    <string name="score">점</string>
    <string name="no_data_shall_we_go">아직 데이터가 없어요. 함께 달려볼까요?</string>
    <string name="no_change_in_score">점수 변동이 없어요.</string>
    <string name="its_disappointing_the_score_decreased">아쉬워요. 지난 주행보다 -n점 하락했어요.</string>
    <string name="amazing_the_score_increased_by">굉장해요. 지난 주행보다 +n점 얻었어요!</string>
    <string name="recent_driving">최근 주행</string>
    <string name="one_month">1개월</string>
    <string name="six_months">6개월</string>
    <string name="one_year">1년</string>
    <string name="engine">엔진</string>
    <string name="tires">타이어</string>
    <string name="brakes">브레이크</string>
    <string name="guidance">안내</string>
    <string name="the_driving_data_provided_by">마일로그에서 제공하는 주행 데이터는 이용 환경에 따라 실제와 다를 수 있습니다.</string>
    <string name="perfect_condition_youre_a_car">완벽한 상태! 자동차 전문가네요!</string>
    <string name="youve_been_maintaining_it_well">꾸준히 잘 관리하고 있어요!</string>
    <string name="its_okay_lets_start_maintaining">괜찮아요. 이제부터 관리해봐요!</string>
    <string name="average_distance_per_driv">1회 평균 주행거리</string>
    <string name="high_speed_driving">고속 주행</string>
    <string name="first_login_text">운전 습관으로\n 차량 가치를 높이는 첫걸음</string>
    <string name="first_terms_text">처음 뵙겠습니다 :)\n이용약관에 동의해주세요</string>
    <string name="first_terms_text_red">이용약관에 동의</string>

    <string name="terms_all_accept">전체 동의</string>
    <string name="terms_title1">본인은 만 18세 이상입니다 (필수)</string>
    <string name="terms_title1_gray">(필수)</string>
    <string name="terms_title2">서비스 이용약관 (필수)</string>
    <string name="terms_title2_gray">(필수)</string>
    <string name="terms_title3">개인정보 수집 및 이용 동의 (필수)</string>
    <string name="terms_title3_gray">(필수)</string>
    <string name="terms_title4">개인정보 수집 및 이용 동의 (선택)</string>
    <string name="terms_title4_gray">(선택)</string>
    <string name="terms_title5">마케팅 정보 수신 동의 (선택)</string>
    <string name="terms_title5_gray">(선택)</string>
    <string name="terms_title6">위치정보 수집 및 이용 동의 (필수)</string>
    <string name="terms_title6_gray">(필수)</string>
    <string name="next">다음</string>

    <string name="permission_info_text1">편리한 마일로그앱 사용을 위해\n아래의 권한을 허용해 주세요.</string>
    <string name="permission_info_force_update">필수 접근 권한</string>
    <string name="permission_info_title1">나만의 주행 스타일</string>
    <string name="permission_info_contents1">주행 분석에만 사용되니 안심하세요!\n반드시 필요한 접근 권한이에요:)</string>


    <string name="location_info">위치 정보</string>
    <string name="location_info_contents">앱이 종료되었거나 사용 중이 아닐 때도 주행 기록 기능을 지원해요. 위치 정보는 핸드폰에만 저장되고 서버로 전송하지 않아요.</string>
    <string name="useractivity_info">신체 활동</string>
    <string name="useractivity_info_contents">주행 시작과 종료를 확인하기 위해 신체 활동 권한 설정이 필요해요.</string>
    <string name="permission_info_choice_update">선택 접근 권한</string>
    <string name="bluetooth_info">블루투스</string>
    <string name="bluetooth_info_contents">정확한 주행 데이터를 쌓기 위해 블루투스 권한이 필요해요.</string>
    <string name="alarm_info">알림</string>
    <string name="alarm_info_contents">앱의 알림을 받기 위해 알림 설정이 필요해요.</string>

    <string name="register_car">내 차 등록하기</string>
    <string name="onboarding_title1">내 차 관리\n잘하고 있을까?</string>
    <string name="onboarding_title2">내 차\n한눈에 보기</string>
    <string name="onboarding_title3">내 운전습관\n괜찮을까?</string>
    <string name="onboarding_contents1">주행 기록을 통해\n관리 점수를 확인해 보세요!</string>
    <string name="onboarding_contents2">엔진・타이어・브레이크를\n체계적으로 관리하세요!</string>
    <string name="onboarding_contents3">상세한 주행 지표로\n나의 운전 습관을 점검해 보세요!</string>

    <string name="register_car_no_title">차량 번호를\n입력해주세요</string>
    <string name="register_car_no_errormessage">입력시 차량 정보를 간편하게 불러올 수 있어요 :)</string>

    <string name="register_car_owner_title">등록증 상의 차량 소유자\n이름을 입력해 주세요</string>
    <string name="register_car_owner_errormessage">입력시 차량 정보를 간편하게 불러올 수 있어요 :)</string>

    <string name="confirm_register_my_car_title">내 차량 정보를\n불러왔어요</string>

    <string name="logout_with_underlined"><u>로그아웃</u></string>
    <string name="withdrawal_with_underlined"><u>회원탈퇴</u></string>
    <string name="pending">미확정</string>
    <string name="not_my_car">"내 차가 아니에요"</string>







</resources>
