<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_50"
    tools:context=".activity.OnBoardingActivity">


    <TextView
        android:id="@+id/tv_onbaording_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title1"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="32dp"
        android:textAppearance="@style/T1SB"
        android:textFontWeight="600"
        android:gravity="left"
        android:textColor="@color/gray_950"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_onbaording_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_contents1"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/B1R"
        android:textFontWeight="400"
        android:textColor="@color/gray_600"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_onbaording_text1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_onbaording_text2"
        app:layout_constraintBottom_toTopOf="@id/layout_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/onboarding_gradient"
        app:layout_constraintBottom_toTopOf="@+id/layout_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/iv_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:src="@drawable/indicator1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_next"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/radius6_gray950"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_car"
            android:textColor="@color/white_op_95"
            android:textFontWeight="600"
            android:textAppearance="@style/B1SB"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>